Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,6 @@ user_path_config-deprecated.txt
 /package-lock.json
 /.coverage*
 /auth.json
-presets/.json*
-wildcards/.txt*
+presets/*.json
+wildcards/*.txt
 .DS_Store
