--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ user_path_config-deprecated.txt
 /.coverage*
 /auth.json
 presets/*.json
-wildcards/*.txt
+wildcards/.txt*
 .DS_Store
-/wildcards
+wildcards/*.txt
+wildcards/samples/*.txt
